# 3dbigdataspace

./: 3Ddata-enrichment_clean.ipynb  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  heritage3d.sqlite3  heritage3d_quickstart.ipynb  pyproject.toml
docs/: architecture.md  sources.md
tests/: test_config.py  test_db.py  test_http.py  test_sources_mapping.py
