[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "heritage3d-retrieval"
version = "0.1.0"
description = "Retrieval and enrichment toolkit for 3D cultural-heritage data (Europeana, Smithsonian, OAI-PMH, and more)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "3D Big Data Space for Cultural Heritage consortium" }]
keywords = ["cultural heritage", "europeana", "3d", "oai-pmh", "digitisation", "open data"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "requests>=2.28",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
enrich = ["spacy>=3.5", "geopy>=2.3", "openai>=1.0"]
convert = ["open3d>=0.17", "usd-core>=23.5"]
europeana = ["pyeuropeana>=0.1.3"]
dev = ["pytest>=7.0", "ruff>=0.1", "black>=23.0", "mypy>=1.0"]
all = ["heritage3d-retrieval[enrich,convert,europeana,dev]"]

[project.scripts]
heritage3d = "heritage3d.cli:main"

[project.urls]
Homepage = "https://example.org/3dbds"
Repository = "https://github.com/EXAMPLE-ORG/heritage3d-retrieval"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.black]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
